# riks_ds_utils

./: .gitignore  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/: index.html
changelog/: index.html
docs/: README.md  api.md  changelog.md  index.md
notebooks/: create_line_imgs_cr.ipynb  fix_1700_transkr_exp.ipynb  page_xmls_to_HTR_dataset.ipynb  split_ocr_dataset.ipynb  test_line_dataset.ipynb  transkribus_export_to_HTR_dataset.ipynb
output/: test.json
search/: search_index.json
src/riks_ds_utils/: label_studio.py  main.py  mmlabs_utils.py  page_transforms.py  preprocess.py
tests/unit/: conftest.py  test_main.py
